--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,10 @@
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
 ul, li {
     list-style-type: none;
     display: inline;
