--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,7 @@
 .container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
+    flex-flow: row, wrap;
+    justify-content: space-around;
 }
 
 ul, li {
