--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
-    flex-flow: row, wrap;
+    flex-flow: row wrap;
     justify-content: space-around;
+    align-content: center;
 }
 
 ul, li {
@@ -9,20 +10,41 @@ ul, li {
     display: inline;
 }
 
+.main_nav {
+    min-width: 48px;
+    min-height: 48px;
+    margin: 20px;
+}
+
+.logo {
+    float: right;
+    overflow: auto;
+}
+
 @media screen and (max-width: 449px) {
+
+
     body {
         background-color: burlywood;
     }
     header {
+        width: 100%;
         order: 1;
     }
     nav {
+        width: 100%;
         order: 2;
     }
 
     section {
+        width: 100%;
         order: 3;
     }
+    footer {
+        width: 100%;
+        order: 4;
+    }
+    
 
 }
 
