--- a/css/app.css
+++ b/css/app.css
@@ -10,11 +10,7 @@ ul, li {
     display: inline;
 }
 
-.main_nav {
-    min-width: 48px;
-    min-height: 48px;
-    margin: 20px;
-}
+
 
 .logo {
     float: right;
@@ -44,13 +40,39 @@ ul, li {
         width: 100%;
         order: 4;
     }
-    
+    .main_nav {
+        min-width: 48px;
+        min-height: 48px;
+        margin: 20px;
+    }
 
 }
 
 @media screen and (min-width: 450px )and (max-width: 749px) {
     body {
         background-color: greenyellow;
+    }
+    header {
+        width: 100%;
+        order: 1;
+    }
+    nav {
+        width: 100%;
+        order: 2;
+    }
+
+    section {
+        width: 100%;
+        order: 3;
+    }
+    footer {
+        width: 100%;
+        order: 4;
+    }
+    .main_nav {
+        min-width: 60px;
+        min-height: 60px;
+        margin: 40px;
     }
 }
 
