--- a/css/app.css
+++ b/css/app.css
@@ -10,8 +10,6 @@ ul, li {
     display: inline;
 }
 
-
-
 .logo {
     float: right;
     overflow: auto;
@@ -26,6 +24,7 @@ ul, li {
     header {
         width: 100%;
         order: 1;
+        border: 1px solid black;
     }
     nav {
         width: 100%;
@@ -48,13 +47,14 @@ ul, li {
 
 }
 
-@media screen and (min-width: 450px )and (max-width: 749px) {
+@media screen and (min-width: 450px )and (max-width: 769px) {
     body {
         background-color: greenyellow;
     }
     header {
         width: 100%;
         order: 1;
+        border: 1px solid black;
     }
     nav {
         width: 100%;
@@ -76,8 +76,31 @@ ul, li {
     }
 }
 
-@media screen and (min-width: 750px){
+@media screen and (min-width: 770px){
     body {
         background-color: #CDE4FF;
     }
+
+    header {
+        width: 100%;
+        border: 1px solid black;
+     
+    }
+    ul, li {
+        display: block;
+        margin: 10px;
+        padding: 10px;
+    }
+
+    nav {
+        width: 25%;
+       
+    }
+    section {
+        width: 75%;
+    }
+    footer {
+        width: 100%;
+    }
+
 }
