--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@
     width: 100%;
 }
 
-.project_links {
+.psecondary_nav {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -21,7 +21,7 @@ ul, li {
 
     /* Working styles delete before submitting */
     body {
-        background-color: burlywood;
+        background-color: white;
     }
     header {
         width: 100%;
@@ -68,6 +68,10 @@ ul, li {
     footer {
         width: 100%;
         order: 4;
+    }
+
+    .secondary_nav {
+        vertical-align: center;
     }
 
 
